locks more apis
